--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -157,3 +157,22 @@ div.mark-top-header button:active {
   border-collapse: collapse;
   border:1px solid #333;
 }
+
+.copycontainer {
+  margin-top: 2px;
+  padding: 2px;
+  display: inline-block;
+  text-decoration: underline;
+  color: blue;
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
+
+:active.copycontainer {
+  color: hotpink;
+}
